Switching to Typescript and TDD
+ refactored to typescript
+ added tests with the help of jest and ts-jest

--- a/example/index.html
+++ b/example/index.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple leaflet.markerPlayer example</title>
-	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
-     integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
-     crossorigin=""/>
-	<link rel="stylesheet" href="index.css"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Simple leaflet.markerPlayer example</title>
+  <link rel="stylesheet" 
+    href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
+    integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
+    crossorigin=""
+  />
+  <link rel="stylesheet" href="index.css"/>
 </head>
 <body>
-    <div id="map"></div>
+  <div id="map"></div>
 	<div id="cntrl-wrap">
 		<div class="cntrl">
 			<span id="play-tog-btn" class="btn">▶</span>
 			<div class="prog-bar-wrap">
-				<div id="prog-bar"></div>
+        <div id="prog-bar"></div>
 			</div>
 			<div class="point-info">
 				<span>Point Id:</span>
@@ -25,11 +27,13 @@
 	</div>
 
 	<script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
-     integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
-     crossorigin=""></script>
+    integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
+    crossorigin=""
+  ></script>
 
-	 <script src="https://unpkg.com/leaflet.markerplayer@latest"
-     crossorigin=""></script>
+  <script src="https://unpkg.com/leaflet.markerplayer@latest"
+    crossorigin=""
+  ></script>
 
 	<script src="index.js"></script>
 </body>
